--- a/index.html
+++ b/index.html
@@ -134,7 +134,8 @@
                     ,<b style="color: #022169">Zeyi Liu</b>
                     ,<a style="color:#000;" href="https://shurans.github.io/">Shuran Song</a>
                     <br><b>Neural Information Processing Systems (NeurIPS), 2025</b><br>
-                    CoRL 2025 Workshop on Sensorizing, Modeling, and Learning from Humans <b>(Oral Presentation)</b><br>
+                    CoRL 2025 Workshop on Sensorizing, Modeling, and Learning from Humans 
+                        <span style="background-color: rgba(255, 255, 0, 0.7);">(Best Paper Award)</span><br>
                     <a href="https://compliant-residual-dagger.github.io/">Website</a>&nbsp;&nbsp;&bull;&nbsp;&nbsp;
                     <a href="https://arxiv.org/abs/2506.16685">ArXiv</a>&nbsp;&nbsp;&bull;&nbsp;&nbsp;
                     <a href="">Code</a>
@@ -162,8 +163,8 @@
                     ,<a style="color:#000;" href="https://www.benburchfiel.com/">Benjamin Burchfiel</a>
                     ,<a style="color:#000;" href="https://shurans.github.io/">Shuran Song</a>
                     <br><b>IEEE International Conference on Robotics and Automation (ICRA), 2025<br></b>
-                    ICRA 2025 Workshop on Learning Meets Model-Based Methods for Contact-Rich Manipulation <b>(Best
-                        Paper Award)</b><br>
+                    ICRA 2025 Workshop on Learning Meets Model-Based Methods for Contact-Rich Manipulation 
+                        <span style="background-color: rgba(255, 255, 0, 0.7);">(Best Paper Award)</span><br>
                     <a href="https://adaptive-compliance.github.io/">Website</a>&nbsp;&nbsp;&bull;&nbsp;&nbsp;
                     <a href="https://arxiv.org/abs/2410.09309">ArXiv</a>&nbsp;&nbsp;&bull;&nbsp;&nbsp;
                     <a href="https://github.com/yifan-hou/adaptive_compliance_policy">Code</a>
@@ -189,8 +190,8 @@
                     ,<a style="color:#000;" href="https://www.benburchfiel.com/">Benjamin Burchfiel</a>
                     ,<a style="color:#000;" href="https://shurans.github.io/">Shuran Song</a>
                     <b><br>Conference on Robot Learning (CoRL), November 2024<br></b>
-                    CoRL 2024 Workshop on Mastering Robot Manipulation in a World of Abundant Data <b>(Oral
-                        Presentation)</b><br>
+                    CoRL 2024 Workshop on Mastering Robot Manipulation in a World of Abundant Data 
+                        <span style="background-color: rgba(255, 255, 0, 0.7);">(Oral Presentation)</span><br>
                     <a href="https://mani-wav.github.io/">Website</a>&nbsp;&nbsp;&bull;&nbsp;&nbsp;
                     <a href="https://arxiv.org/abs/2406.19464">ArXiv</a>&nbsp;&nbsp;&bull;&nbsp;&nbsp;
                     <a href="https://www.youtube.com/watch?v=SzHENLZ7_tc">Video</a>&nbsp;&nbsp;&bull;&nbsp;&nbsp;
@@ -240,7 +241,8 @@
                     ,<a style="color:#000;" href="https://arpitrf.github.io/">Arpit Bahety*</a>
                     ,<a style="color:#000;" href="https://shurans.github.io/">Shuran Song</a>
                     <b><br>Conference on Robot Learning (CoRL), November 2023<br></b>
-                    CoRL 2023 Workshop on Language and Robot Learning <b>(Oral Presentation)</b><br>
+                    CoRL 2023 Workshop on Language and Robot Learning 
+                        <span style="background-color: rgba(255, 255, 0, 0.7);">(Oral Presentation)</span><br>
                     <a href="https://robot-reflect.github.io/">Website</a>&nbsp;&nbsp;&bull;&nbsp;&nbsp;
                     <a href="https://arxiv.org/abs/2306.15724">ArXiv</a>&nbsp;&nbsp;&bull;&nbsp;&nbsp;
                     <a href="https://www.youtube.com/watch?v=Proiua4NNTk">Video</a>&nbsp;&nbsp;&bull;&nbsp;&nbsp;
@@ -291,6 +293,12 @@
             <h1>Workshops</h1>
             <p><b>ICRA 2025</b> 1st Workshop on Acoustic Sensing and Representations for Robotics &nbsp;&bull;&nbsp; <a
                     href="https://sites.google.com/view/roboacoustics">RoboAcoustics@ICRA 2025</a>
+            </p>
+            <p><b>ICML 2025</b> Building Physically Plausible World Models &nbsp;&bull;&nbsp; <a
+                    href="https://physical-world-modeling.github.io/">Website</a>
+            </p>
+            <p><b>CoRL 2025</b> Robotics World Modeling &nbsp;&bull;&nbsp; <a
+                    href="https://robot-world-modeling.github.io/">Website</a>
             </p>
             <h1>Teaching & Outreach</h1>
             <p>
